--- a/mate-polkit/polkitgtkmate/Makefile.in
+++ b/mate-polkit/polkitgtkmate/Makefile.in
@@ -38,16 +38,17 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 noinst_PROGRAMS = example$(EXEEXT)
-subdir = polkitgtk
-DIST_COMMON = $(libpolkit_gtk_1include_HEADERS) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in $(srcdir)/polkit-gtk-1.pc.in
+subdir = polkitgtkmate
+DIST_COMMON = $(libpolkit_gtk_mate_1include_HEADERS) \
+	$(srcdir)/Makefile.am $(srcdir)/Makefile.in \
+	$(srcdir)/polkit-gtk-mate-1.pc.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = polkit-gtk-1.pc
+CONFIG_CLEAN_FILES = polkit-gtk-mate-1.pc
 CONFIG_CLEAN_VPATH_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -72,28 +73,30 @@ am__base_list = \
   sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
 am__installdirs = "$(DESTDIR)$(libdir)" "$(DESTDIR)$(girdir)" \
 	"$(DESTDIR)$(pkgconfigdir)" "$(DESTDIR)$(typelibsdir)" \
-	"$(DESTDIR)$(libpolkit_gtk_1includedir)"
+	"$(DESTDIR)$(libpolkit_gtk_mate_1includedir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
 am__DEPENDENCIES_1 =
-libpolkit_gtk_1_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
+libpolkit_gtk_mate_1_la_DEPENDENCIES = $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1)
 am__objects_1 =
-am_libpolkit_gtk_1_la_OBJECTS =  \
-	libpolkit_gtk_1_la-polkitlockbutton.lo $(am__objects_1)
-libpolkit_gtk_1_la_OBJECTS = $(am_libpolkit_gtk_1_la_OBJECTS)
+am_libpolkit_gtk_mate_1_la_OBJECTS =  \
+	libpolkit_gtk_mate_1_la-polkitlockbutton.lo $(am__objects_1)
+libpolkit_gtk_mate_1_la_OBJECTS =  \
+	$(am_libpolkit_gtk_mate_1_la_OBJECTS)
 AM_V_lt = $(am__v_lt_$(V))
 am__v_lt_ = $(am__v_lt_$(AM_DEFAULT_VERBOSITY))
 am__v_lt_0 = --silent
-libpolkit_gtk_1_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
+libpolkit_gtk_mate_1_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
 	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CCLD) \
-	$(libpolkit_gtk_1_la_CFLAGS) $(CFLAGS) \
-	$(libpolkit_gtk_1_la_LDFLAGS) $(LDFLAGS) -o $@
+	$(libpolkit_gtk_mate_1_la_CFLAGS) $(CFLAGS) \
+	$(libpolkit_gtk_mate_1_la_LDFLAGS) $(LDFLAGS) -o $@
 PROGRAMS = $(noinst_PROGRAMS)
 am_example_OBJECTS = example-example.$(OBJEXT)
 example_OBJECTS = $(am_example_OBJECTS)
 example_DEPENDENCIES = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1) libpolkit-gtk-1.la $(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) libpolkit-gtk-mate-1.la \
+	$(am__DEPENDENCIES_1)
 example_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(example_CFLAGS) \
 	$(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
@@ -123,10 +126,10 @@ am__v_CCLD_0 = @echo "  CCLD  " $@;
 AM_V_GEN = $(am__v_GEN_$(V))
 am__v_GEN_ = $(am__v_GEN_$(AM_DEFAULT_VERBOSITY))
 am__v_GEN_0 = @echo "  GEN   " $@;
-SOURCES = $(libpolkit_gtk_1_la_SOURCES) $(example_SOURCES)
-DIST_SOURCES = $(libpolkit_gtk_1_la_SOURCES) $(example_SOURCES)
+SOURCES = $(libpolkit_gtk_mate_1_la_SOURCES) $(example_SOURCES)
+DIST_SOURCES = $(libpolkit_gtk_mate_1_la_SOURCES) $(example_SOURCES)
 DATA = $(gir_DATA) $(pkgconfig_DATA) $(typelibs_DATA)
-HEADERS = $(libpolkit_gtk_1include_HEADERS)
+HEADERS = $(libpolkit_gtk_mate_1include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -299,50 +302,50 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 NULL = 
-lib_LTLIBRARIES = libpolkit-gtk-1.la
-libpolkit_gtk_1includedir = $(includedir)/polkit-gtk-1/polkitgtk
-libpolkit_gtk_1include_HEADERS = \
-	polkitgtk.h							\
-	polkitgtktypes.h						\
+lib_LTLIBRARIES = libpolkit-gtk-mate-1.la
+libpolkit_gtk_mate_1includedir = $(includedir)/polkit-gtk-mate-1/polkitgtkmate
+libpolkit_gtk_mate_1include_HEADERS = \
+	polkitgtkmate.h							\
+	polkitgtkmatetypes.h						\
 	polkitlockbutton.h						\
 	$(NULL)
 
-libpolkit_gtk_1_la_SOURCES = \
-	polkitgtk.h							\
-	polkitgtktypes.h						\
+libpolkit_gtk_mate_1_la_SOURCES = \
+	polkitgtkmate.h							\
+	polkitgtkmatetypes.h						\
 	polkitlockbutton.h			polkitlockbutton.c	\
 	$(NULL)
 
-libpolkit_gtk_1_la_CPPFLAGS = \
+libpolkit_gtk_mate_1_la_CPPFLAGS = \
 	-I$(top_srcdir)					\
 	-I$(top_builddir)				\
-	-I$(top_srcdir)/polkitgtk			\
-	-I$(top_builddir)/polkitgtk			\
-	-DG_LOG_DOMAIN=\"polkitgtk\"			\
+	-I$(top_srcdir)/polkitgtkmate			\
+	-I$(top_builddir)/polkitgtkmate			\
+	-DG_LOG_DOMAIN=\"polkitgtkmate\"			\
 	-DMATELOCALEDIR=\""$(datadir)/locale"\"	\
 	$(DISABLE_DEPRECATED)				\
 	$(AM_CPPFLAGS)					\
-	-DPOLKIT_GTK_COMPILATION			\
+	-DPOLKIT_GTK_MATE_COMPILATION			\
 	$(NULL)
 
-libpolkit_gtk_1_la_CFLAGS = \
+libpolkit_gtk_mate_1_la_CFLAGS = \
 	$(POLKIT_GOBJECT_CFLAGS)			\
 	$(GTK_CFLAGS)					\
 	$(WARN_CFLAGS)					\
 	$(AM_CFLAGS)					\
 	$(NULL)
 
-libpolkit_gtk_1_la_LIBADD = \
+libpolkit_gtk_mate_1_la_LIBADD = \
 	$(POLKIT_GOBJECT_LIBS)				\
 	$(GTK_LIBS)					\
 	$(INTLLIBS)					\
 	$(NULL)
 
-libpolkit_gtk_1_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
+libpolkit_gtk_mate_1_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 		        -export-dynamic -no-undefined -export-symbols-regex '(^polkit_.*)'
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = polkit-gtk-1.pc
+pkgconfig_DATA = polkit-gtk-mate-1.pc
 example_SOURCES = example.c
 example_CFLAGS = \
 	-I$(top_srcdir)					\
@@ -357,13 +360,13 @@ example_LDADD = \
 	$(POLKIT_GOBJECT_LIBS)				\
 	$(GTK_LIBS)					\
 	$(INTLLIBS)					\
-	libpolkit-gtk-1.la				\
+	libpolkit-gtk-mate-1.la				\
 	$(NULL)
 
 @ENABLE_INTROSPECTION_TRUE@girdir = $(GIRDIR)
-@ENABLE_INTROSPECTION_TRUE@gir_DATA = PolkitGtk-1.0.gir
+@ENABLE_INTROSPECTION_TRUE@gir_DATA = PolkitGtkMate-1.0.gir
 @ENABLE_INTROSPECTION_TRUE@typelibsdir = $(GIRTYPELIBDIR)
-@ENABLE_INTROSPECTION_TRUE@typelibs_DATA = PolkitGtk-1.0.typelib
+@ENABLE_INTROSPECTION_TRUE@typelibs_DATA = PolkitGtkMate-1.0.typelib
 CLEANFILES = $(BUILT_SOURCES) $(pkgconfig_DATA) $(gir_DATA) $(typelibs_DATA)
 all: all-am
 
@@ -378,9 +381,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign polkitgtk/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign polkitgtkmate/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --foreign polkitgtk/Makefile
+	  $(AUTOMAKE) --foreign polkitgtkmate/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -399,7 +402,7 @@ $(top_srcdir)/configure: @MAINTAINER_MODE_TRUE@ $(am__configure_deps)
 $(ACLOCAL_M4): @MAINTAINER_MODE_TRUE@ $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-polkit-gtk-1.pc: $(top_builddir)/config.status $(srcdir)/polkit-gtk-1.pc.in
+polkit-gtk-mate-1.pc: $(top_builddir)/config.status $(srcdir)/polkit-gtk-mate-1.pc.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 install-libLTLIBRARIES: $(lib_LTLIBRARIES)
 	@$(NORMAL_INSTALL)
@@ -432,8 +435,8 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libpolkit-gtk-1.la: $(libpolkit_gtk_1_la_OBJECTS) $(libpolkit_gtk_1_la_DEPENDENCIES) 
-	$(AM_V_CCLD)$(libpolkit_gtk_1_la_LINK) -rpath $(libdir) $(libpolkit_gtk_1_la_OBJECTS) $(libpolkit_gtk_1_la_LIBADD) $(LIBS)
+libpolkit-gtk-mate-1.la: $(libpolkit_gtk_mate_1_la_OBJECTS) $(libpolkit_gtk_mate_1_la_DEPENDENCIES) 
+	$(AM_V_CCLD)$(libpolkit_gtk_mate_1_la_LINK) -rpath $(libdir) $(libpolkit_gtk_mate_1_la_OBJECTS) $(libpolkit_gtk_mate_1_la_LIBADD) $(LIBS)
 
 clean-noinstPROGRAMS:
 	@list='$(noinst_PROGRAMS)'; test -n "$$list" || exit 0; \
@@ -454,7 +457,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/example-example.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libpolkit_gtk_1_la-polkitlockbutton.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libpolkit_gtk_mate_1_la-polkitlockbutton.Plo@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
@@ -480,13 +483,13 @@ distclean-compile:
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LTCOMPILE) -c -o $@ $<
 
-libpolkit_gtk_1_la-polkitlockbutton.lo: polkitlockbutton.c
-@am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libpolkit_gtk_1_la_CPPFLAGS) $(CPPFLAGS) $(libpolkit_gtk_1_la_CFLAGS) $(CFLAGS) -MT libpolkit_gtk_1_la-polkitlockbutton.lo -MD -MP -MF $(DEPDIR)/libpolkit_gtk_1_la-polkitlockbutton.Tpo -c -o libpolkit_gtk_1_la-polkitlockbutton.lo `test -f 'polkitlockbutton.c' || echo '$(srcdir)/'`polkitlockbutton.c
-@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libpolkit_gtk_1_la-polkitlockbutton.Tpo $(DEPDIR)/libpolkit_gtk_1_la-polkitlockbutton.Plo
+libpolkit_gtk_mate_1_la-polkitlockbutton.lo: polkitlockbutton.c
+@am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libpolkit_gtk_mate_1_la_CPPFLAGS) $(CPPFLAGS) $(libpolkit_gtk_mate_1_la_CFLAGS) $(CFLAGS) -MT libpolkit_gtk_mate_1_la-polkitlockbutton.lo -MD -MP -MF $(DEPDIR)/libpolkit_gtk_mate_1_la-polkitlockbutton.Tpo -c -o libpolkit_gtk_mate_1_la-polkitlockbutton.lo `test -f 'polkitlockbutton.c' || echo '$(srcdir)/'`polkitlockbutton.c
+@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/libpolkit_gtk_mate_1_la-polkitlockbutton.Tpo $(DEPDIR)/libpolkit_gtk_mate_1_la-polkitlockbutton.Plo
 @am__fastdepCC_FALSE@	$(AM_V_CC) @AM_BACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='polkitlockbutton.c' object='libpolkit_gtk_1_la-polkitlockbutton.lo' libtool=yes @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='polkitlockbutton.c' object='libpolkit_gtk_mate_1_la-polkitlockbutton.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libpolkit_gtk_1_la_CPPFLAGS) $(CPPFLAGS) $(libpolkit_gtk_1_la_CFLAGS) $(CFLAGS) -c -o libpolkit_gtk_1_la-polkitlockbutton.lo `test -f 'polkitlockbutton.c' || echo '$(srcdir)/'`polkitlockbutton.c
+@am__fastdepCC_FALSE@	$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libpolkit_gtk_mate_1_la_CPPFLAGS) $(CPPFLAGS) $(libpolkit_gtk_mate_1_la_CFLAGS) $(CFLAGS) -c -o libpolkit_gtk_mate_1_la-polkitlockbutton.lo `test -f 'polkitlockbutton.c' || echo '$(srcdir)/'`polkitlockbutton.c
 
 example-example.o: example.c
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(example_CFLAGS) $(CFLAGS) -MT example-example.o -MD -MP -MF $(DEPDIR)/example-example.Tpo -c -o example-example.o `test -f 'example.c' || echo '$(srcdir)/'`example.c
@@ -569,26 +572,26 @@ uninstall-typelibsDATA:
 	test -n "$$files" || exit 0; \
 	echo " ( cd '$(DESTDIR)$(typelibsdir)' && rm -f" $$files ")"; \
 	cd "$(DESTDIR)$(typelibsdir)" && rm -f $$files
-install-libpolkit_gtk_1includeHEADERS: $(libpolkit_gtk_1include_HEADERS)
+install-libpolkit_gtk_mate_1includeHEADERS: $(libpolkit_gtk_mate_1include_HEADERS)
 	@$(NORMAL_INSTALL)
-	test -z "$(libpolkit_gtk_1includedir)" || $(MKDIR_P) "$(DESTDIR)$(libpolkit_gtk_1includedir)"
-	@list='$(libpolkit_gtk_1include_HEADERS)'; test -n "$(libpolkit_gtk_1includedir)" || list=; \
+	test -z "$(libpolkit_gtk_mate_1includedir)" || $(MKDIR_P) "$(DESTDIR)$(libpolkit_gtk_mate_1includedir)"
+	@list='$(libpolkit_gtk_mate_1include_HEADERS)'; test -n "$(libpolkit_gtk_mate_1includedir)" || list=; \
 	for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  echo "$$d$$p"; \
 	done | $(am__base_list) | \
 	while read files; do \
-	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libpolkit_gtk_1includedir)'"; \
-	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libpolkit_gtk_1includedir)" || exit $$?; \
+	  echo " $(INSTALL_HEADER) $$files '$(DESTDIR)$(libpolkit_gtk_mate_1includedir)'"; \
+	  $(INSTALL_HEADER) $$files "$(DESTDIR)$(libpolkit_gtk_mate_1includedir)" || exit $$?; \
 	done
 
-uninstall-libpolkit_gtk_1includeHEADERS:
+uninstall-libpolkit_gtk_mate_1includeHEADERS:
 	@$(NORMAL_UNINSTALL)
-	@list='$(libpolkit_gtk_1include_HEADERS)'; test -n "$(libpolkit_gtk_1includedir)" || list=; \
+	@list='$(libpolkit_gtk_mate_1include_HEADERS)'; test -n "$(libpolkit_gtk_mate_1includedir)" || list=; \
 	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
 	test -n "$$files" || exit 0; \
-	echo " ( cd '$(DESTDIR)$(libpolkit_gtk_1includedir)' && rm -f" $$files ")"; \
-	cd "$(DESTDIR)$(libpolkit_gtk_1includedir)" && rm -f $$files
+	echo " ( cd '$(DESTDIR)$(libpolkit_gtk_mate_1includedir)' && rm -f" $$files ")"; \
+	cd "$(DESTDIR)$(libpolkit_gtk_mate_1includedir)" && rm -f $$files
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
 	list='$(SOURCES) $(HEADERS) $(LISP) $(TAGS_FILES)'; \
@@ -676,7 +679,7 @@ check-am: all-am
 check: check-am
 all-am: Makefile $(LTLIBRARIES) $(PROGRAMS) $(DATA) $(HEADERS)
 installdirs:
-	for dir in "$(DESTDIR)$(libdir)" "$(DESTDIR)$(girdir)" "$(DESTDIR)$(pkgconfigdir)" "$(DESTDIR)$(typelibsdir)" "$(DESTDIR)$(libpolkit_gtk_1includedir)"; do \
+	for dir in "$(DESTDIR)$(libdir)" "$(DESTDIR)$(girdir)" "$(DESTDIR)$(pkgconfigdir)" "$(DESTDIR)$(typelibsdir)" "$(DESTDIR)$(libpolkit_gtk_mate_1includedir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-am
@@ -728,7 +731,8 @@ info: info-am
 
 info-am:
 
-install-data-am: install-girDATA install-libpolkit_gtk_1includeHEADERS \
+install-data-am: install-girDATA \
+	install-libpolkit_gtk_mate_1includeHEADERS \
 	install-pkgconfigDATA install-typelibsDATA
 
 install-dvi: install-dvi-am
@@ -776,7 +780,7 @@ ps: ps-am
 ps-am:
 
 uninstall-am: uninstall-girDATA uninstall-libLTLIBRARIES \
-	uninstall-libpolkit_gtk_1includeHEADERS \
+	uninstall-libpolkit_gtk_mate_1includeHEADERS \
 	uninstall-pkgconfigDATA uninstall-typelibsDATA
 
 .MAKE: install-am install-strip
@@ -789,38 +793,39 @@ uninstall-am: uninstall-girDATA uninstall-libLTLIBRARIES \
 	install-data install-data-am install-dvi install-dvi-am \
 	install-exec install-exec-am install-girDATA install-html \
 	install-html-am install-info install-info-am \
-	install-libLTLIBRARIES install-libpolkit_gtk_1includeHEADERS \
-	install-man install-pdf install-pdf-am install-pkgconfigDATA \
-	install-ps install-ps-am install-strip install-typelibsDATA \
-	installcheck installcheck-am installdirs maintainer-clean \
+	install-libLTLIBRARIES \
+	install-libpolkit_gtk_mate_1includeHEADERS install-man \
+	install-pdf install-pdf-am install-pkgconfigDATA install-ps \
+	install-ps-am install-strip install-typelibsDATA installcheck \
+	installcheck-am installdirs maintainer-clean \
 	maintainer-clean-generic mostlyclean mostlyclean-compile \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
 	tags uninstall uninstall-am uninstall-girDATA \
 	uninstall-libLTLIBRARIES \
-	uninstall-libpolkit_gtk_1includeHEADERS \
+	uninstall-libpolkit_gtk_mate_1includeHEADERS \
 	uninstall-pkgconfigDATA uninstall-typelibsDATA
 
 
-@ENABLE_INTROSPECTION_TRUE@PolkitGtk-1.0.gir: libpolkit-gtk-1.la $(G_IR_SCANNER) Makefile.am
+@ENABLE_INTROSPECTION_TRUE@PolkitGtkMate-1.0.gir: libpolkit-gtk-mate-1.la $(G_IR_SCANNER) Makefile.am
 @ENABLE_INTROSPECTION_TRUE@	$(G_IR_SCANNER) -v 					\
-@ENABLE_INTROSPECTION_TRUE@		--namespace PolkitGtk 				\
+@ENABLE_INTROSPECTION_TRUE@		--namespace PolkitGtkMate 				\
 @ENABLE_INTROSPECTION_TRUE@		--strip-prefix=Polkit				\
 @ENABLE_INTROSPECTION_TRUE@		--nsversion=1.0 				\
 @ENABLE_INTROSPECTION_TRUE@		--include=Gtk-2.0 				\
 @ENABLE_INTROSPECTION_TRUE@		--include=Polkit-1.0 				\
-@ENABLE_INTROSPECTION_TRUE@		--library=polkit-gtk-1 				\
+@ENABLE_INTROSPECTION_TRUE@		--library=polkit-gtk-mate-1 				\
 @ENABLE_INTROSPECTION_TRUE@		--output $@ 					\
 @ENABLE_INTROSPECTION_TRUE@		--pkg=polkit-gobject-1				\
 @ENABLE_INTROSPECTION_TRUE@		--pkg=gtk+-2.0 					\
 @ENABLE_INTROSPECTION_TRUE@		--libtool=$(top_builddir)/libtool		\
 @ENABLE_INTROSPECTION_TRUE@                -I$(top_srcdir)		 			\
-@ENABLE_INTROSPECTION_TRUE@	        -DPOLKIT_GTK_COMPILATION                   	\
-@ENABLE_INTROSPECTION_TRUE@		$(srcdir)/polkitgtk.h 				\
-@ENABLE_INTROSPECTION_TRUE@		$(srcdir)/polkitgtktypes.h 			\
+@ENABLE_INTROSPECTION_TRUE@	        -DPOLKIT_GTK_MATE_COMPILATION                   	\
+@ENABLE_INTROSPECTION_TRUE@		$(srcdir)/polkitgtkmate.h 				\
+@ENABLE_INTROSPECTION_TRUE@		$(srcdir)/polkitgtkmatetypes.h 			\
 @ENABLE_INTROSPECTION_TRUE@		$(srcdir)/polkitlockbutton.h 			\
 @ENABLE_INTROSPECTION_TRUE@		$(NULL)
 
-@ENABLE_INTROSPECTION_TRUE@PolkitGtk-1.0.typelib: PolkitGtk-1.0.gir $(G_IR_COMPILER)
+@ENABLE_INTROSPECTION_TRUE@PolkitGtkMate-1.0.typelib: PolkitGtkMate-1.0.gir $(G_IR_COMPILER)
 @ENABLE_INTROSPECTION_TRUE@	$(G_IR_COMPILER) $< -o $@
 
 clean-local :
