--- a/mate-polkit/polkitgtkmate/polkit-gtk-mate-1.pc.in
+++ b/mate-polkit/polkitgtkmate/polkit-gtk-mate-1.pc.in
@@ -3,9 +3,9 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: polkit-gtk-1
+Name: polkit-gtk-mate-1
 Description: PolicyKit GTK+ widgets
 Version: @VERSION@
-Libs: -L${libdir} -lpolkit-gtk-1
-Cflags: -I${includedir}/polkit-gtk-1
+Libs: -L${libdir} -lpolkit-gtk-mate-1
+Cflags: -I${includedir}/polkit-gtk-mate-1
 Requires: polkit-gobject-1
