--- a/mate-polkit/Makefile.in
+++ b/mate-polkit/Makefile.in
@@ -275,7 +275,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = polkitgtk src po docs
+SUBDIRS = polkitgtkmate src po docs
 EXTRA_DIST = \
 	autogen.sh		\
 	TODO			\
