--- a/mate-polkit/docs/Makefile.in
+++ b/mate-polkit/docs/Makefile.in
@@ -231,20 +231,20 @@ NULL =
 AUTOMAKE_OPTIONS = 1.7
 
 # The name of the module.
-DOC_MODULE = polkit-gtk-1
+DOC_MODULE = polkit-gtk-mate-1
 
 # The top-level SGML file.
-DOC_MAIN_SGML_FILE = polkit-gtk-1-docs.xml
+DOC_MAIN_SGML_FILE = polkit-gtk-mate-1-docs.xml
 
 # Extra options to supply to gtkdoc-scan
 SCAN_OPTIONS = --ignore-headers=config.h
 
 # The directory containing the source code. Relative to $(srcdir)
-DOC_SOURCE_DIR = ../polkitgtk
+DOC_SOURCE_DIR = ../polkitgtkmate
 
 # Used for dependencies
-HFILE_GLOB = $(top_srcdir)/polkitgtk/*.h
-CFILE_GLOB = $(top_srcdir)/polkitgtk/*.c
+HFILE_GLOB = $(top_srcdir)/polkitgtkmate/*.h
+CFILE_GLOB = $(top_srcdir)/polkitgtkmate/*.c
 
 # Headers to ignore
 IGNORE_HFILES = \
@@ -256,13 +256,13 @@ IGNORE_HFILES = \
 INCLUDES = \
 	$(POLKIT_GOBJECT_CFLAGS)				\
 	$(GTK_CFLAGS)						\
-	-I$(top_srcdir)/polkitgtk 				\
+	-I$(top_srcdir)/polkitgtkmate 				\
 	$(NULL)
 
 GTKDOC_LIBS = \
 	$(POLKIT_GOBJECT_LIBS)					\
 	$(GTK_LIBS)						\
-	$(top_builddir)/polkitgtk/libpolkit-gtk-1.la		\
+	$(top_builddir)/polkitgtkmate/libpolkit-gtk-mate-1.la		\
 	$(NULL)
 
 
@@ -328,29 +328,31 @@ FIXXREF_OPTIONS =
 @ENABLE_GTK_DOC_TRUE@	$(DOC_MODULE)-undeclared.txt \
 @ENABLE_GTK_DOC_TRUE@	$(DOC_MODULE)-unused.txt
 
-@ENABLE_GTK_DOC_FALSE@CLEANFILES = *~ polkit-gtk-1-scan.* \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1.args polkit-gtk-1.hierarchy \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1.interfaces \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1.prerequisites \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1.signals *.bak \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1-decl-list.txt \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1-decl.txt \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1-overrides.txt \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1-undeclared.txt \
-@ENABLE_GTK_DOC_FALSE@	polkit-gtk-1-undocumented.txt *.stamp \
-@ENABLE_GTK_DOC_FALSE@	version.xml -rf html xml $(NULL)
+@ENABLE_GTK_DOC_FALSE@CLEANFILES = *~ polkit-gtk-mate-1-scan.* \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1.args \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1.hierarchy \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1.interfaces \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1.prerequisites \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1.signals *.bak \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1-decl-list.txt \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1-decl.txt \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1-overrides.txt \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1-undeclared.txt \
+@ENABLE_GTK_DOC_FALSE@	polkit-gtk-mate-1-undocumented.txt \
+@ENABLE_GTK_DOC_FALSE@	*.stamp version.xml -rf html xml $(NULL)
 @ENABLE_GTK_DOC_TRUE@CLEANFILES = $(SCANOBJ_FILES) $(REPORT_FILES) \
-@ENABLE_GTK_DOC_TRUE@	$(DOC_STAMPS) *~ polkit-gtk-1-scan.* \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1.args polkit-gtk-1.hierarchy \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1.interfaces \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1.prerequisites \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1.signals *.bak \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1-decl-list.txt \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1-decl.txt \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1-overrides.txt \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1-undeclared.txt \
-@ENABLE_GTK_DOC_TRUE@	polkit-gtk-1-undocumented.txt *.stamp \
-@ENABLE_GTK_DOC_TRUE@	version.xml -rf html xml $(NULL)
+@ENABLE_GTK_DOC_TRUE@	$(DOC_STAMPS) *~ polkit-gtk-mate-1-scan.* \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1.args \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1.hierarchy \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1.interfaces \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1.prerequisites \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1.signals *.bak \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1-decl-list.txt \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1-decl.txt \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1-overrides.txt \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1-undeclared.txt \
+@ENABLE_GTK_DOC_TRUE@	polkit-gtk-mate-1-undocumented.txt \
+@ENABLE_GTK_DOC_TRUE@	*.stamp version.xml -rf html xml $(NULL)
 @ENABLE_GTK_DOC_TRUE@@GTK_DOC_BUILD_HTML_FALSE@HTML_BUILD_STAMP = 
 @ENABLE_GTK_DOC_TRUE@@GTK_DOC_BUILD_HTML_TRUE@HTML_BUILD_STAMP = html-build.stamp
 @ENABLE_GTK_DOC_TRUE@@GTK_DOC_BUILD_PDF_FALSE@PDF_BUILD_STAMP = 
