--- a/mate-settings-daemon/plugins/media-keys/Makefile.in
+++ b/mate-settings-daemon/plugins/media-keys/Makefile.in
@@ -363,7 +363,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-icondir = $(datadir)/icons/hicolor
+icondir = $(datadir)/icons/mate
 context = actions
 NULL = 
 SUBDIRS = $(am__append_1)
