--- a/mate-settings-daemon/plugins/xrandr/Makefile.in
+++ b/mate-settings-daemon/plugins/xrandr/Makefile.in
@@ -282,7 +282,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-icondir = $(datadir)/icons/hicolor
+icondir = $(datadir)/icons/mate
 context = apps
 BUILT_SOURCES = \
 	gsd-xrandr-manager-glue.h
